# shadows

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
scripts/: setup-system-deps.sh
shadows/: __init__.py  __main__.py  ai.py  detector.py  overlay.py  storage.py  ui.py
tests/: __init__.py  test_detector.py  test_storage.py
